# IML

Project/scripts_and_data/: CV_NaiveBayes.py  NaiveBayes.py  dt_rf_svm_logreg.py  dt_rf_svm_logreg_CV.py  ml_dataset_engineering_script.py  naive_bayes.py  nb_feature_stats.csv  pathfinding_robot_navigation_dataset.csv  pathfinding_robot_navigation_dataset_engineered.csv
custom_interfaces/: CMakeLists.txt  package.xml
vn_driver/: package.xml  setup.py
vn_driver/launch/: vn_driver_launch.py
vn_driver/vn_driver/: vn_driver.py
