<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vn_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="barker.ch@northeastern.edu">cbarker</maintainer>
  <license>Apache-2.0</license>

    #added from rtk driver
    #added:
    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend> #added to vn driver
    <depend>scipy</depend>
    <depend>builtin_interfaces</depend>
    <depend>custom_interfaces</depend> #changed for vn driver
    <exec_depend>ros2launch</exec_depend>

    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>
    #end added


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
